fixing parallax img responsive

--- a/home.html
+++ b/home.html
@@ -123,12 +123,16 @@
     </section>
   <!-- /Showcase / Grid-->
 
-  <!-- Parallax1 -->
-    <div class="parallax-container">
+  <!-- Parallax1 <div class="parallax1 hide-on-med-and-up"></div>-->
+
+    <div class="parallax-container hide-on-small-only">
       <h1 class="parallax-title">A nice parallax</h1>
       <div class="parallax">
-        <img src="images/parallax1.jpg" alt="lanterns" class="responsive-img">
+        <img src="images/parallax1.jpg" alt="lanterns" class="responsive-img hide-on-small-only">
       </div>
+    </div>
+    <div class="parallax1 hide-on-med-and-up">
+      <img src="images/parallax1.jpg" alt="" class="responsive-img">
     </div>
   <!-- /Parallax1 -->
 
@@ -169,12 +173,17 @@
   <!-- /services-->
 
   <!-- Parallax2 -->
-    <div class="parallax-container">
+
+    <div class="parallax-container hide-on-small-only">
       <h1 class="parallax-title">A nice parallax</h1>
       <div class="parallax">
-        <img src="images/parallax2.jpg" alt="lanterns" class="responsive-img">
+        <img src="images/parallax2.jpg" alt="lanterns" class="responsive-img hide-on-small-only">
       </div>
     </div>
+    <div class="parallax2 hide-on-med-and-up">
+      <img src="images/parallax2.jpg" alt="" class="responsive-img">
+    </div>
+
   <!-- /Parallax2 -->
     <div class="section container">
       <div class="col s5 psh-s7"></div>
