more font and img tweeks

--- a/home.html
+++ b/home.html
@@ -157,12 +157,12 @@
           </ul>
           <hr>
           <div id="web-developer" class="col s12">
-              <p class="flow-text grey-text text-darken-4">Web Developer</p>
+              <p class="flow-text grey-text text-darken-4" id="tab1">Web Developer</p>
               <p class="pbody">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum at lacus congue, suscipit elit nec, tincidunt orci.</p>
               <p class="pbody">Mauris dolor augue, vulputate in pharetra ac, facilisis nec libero. Fusce condimentum gravida urna, vitae scelerisque erat ornare nec.</p>
           </div>
           <div id="editing" class="col s12">
-              <p class="flow-text grey-text text-darken-4">Editing</p>
+              <p class="flow-text grey-text text-darken-4" id="tab1">Editing</p>
               <p class="pbody">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum at lacus congue, suscipit elit nec, tincidunt orci.</p>
               <p class="pbody">Mauris dolor augue, vulputate in pharetra ac, facilisis nec libero. Fusce condimentum gravida urna, vitae scelerisque erat ornare nec. Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s</p>
           </div>
