Simplify JS & brighten hero img

--- a/home.html
+++ b/home.html
@@ -29,6 +29,9 @@
 </head>
 
 <header>
+
+
+
 <!-- Navbar -->
         <nav class="aa-nav back2 back1">
             <img class="aa-nav-icon" src="support_files/images/flag.png"/>
@@ -177,11 +180,11 @@
     <div class="parallax-container hide-on-small-only">
       <h1 class="parallax-title">A nice parallax</h1>
       <div class="parallax">
-        <img src="images/parallax2.jpg" alt="lanterns" class="responsive-img hide-on-small-only">
+        <img src="images/parallax2.jpg" alt="Grey Moundians" class="responsive-img hide-on-small-only">
       </div>
     </div>
     <div class="parallax2 hide-on-med-and-up">
-      <img src="images/parallax2.jpg" alt="" class="responsive-img">
+      <img src="images/parallax2.jpg" alt="Grey Moundians" class="responsive-img">
     </div>
 
   <!-- /Parallax2 -->
