new imgs / css effects

--- a/home.html
+++ b/home.html
@@ -22,6 +22,7 @@
     <link rel="shortcut icon" href="support_files/images/flag.png" type="image/x-icon">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="support_files/port.css">
+    <link rel="stylesheet" href="spinner.html">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
     <script src="scripts.js"></script>
@@ -29,8 +30,6 @@
 </head>
 
 <header>
-
-
 
 <!-- Navbar -->
         <nav class="aa-nav back2 back1">
@@ -51,7 +50,9 @@
             <span class="aa-icon-bar"></span>
             <span class="aa-icon-bar"></span>
         </div>
-    <!-- Mobile Overlay -->
+    <!-- Mobile Overlay -->        <!--<h4 class=" container roww sub-title flow-text col s12 m6 item2 hide-on-med-and-down"><strong>The bit of what I do is done not because I have to do it; <br>
+        But because I can do it.  That's what drives me.
+        <hr></strong></h4>-->
         <div class="aa-mobile-overlay">
             <ul class="aa-mobile-nav-items">
                 <li><a href="#title">Home</a></li>
@@ -79,6 +80,9 @@
         <div id="title" class="hide-on-med-and-up">
             <h1 class="roww item3 flow-text col s12 m12">A collection of works <br> Built and designed by <br>Andrew Mawhinney</h1>
         </div>
+        <!--<h4 class=" container roww sub-title flow-text col s12 m6 item2 hide-on-med-and-down"><strong>The bit of what I do is done not because I have to do it; <br>
+        But because I can do it.  That's what drives me.
+        <hr></strong></h4>-->
         <div class="hero hide-on-small-only"></div>
         <div class="ero-after hide-on-med-and-up"></div>
 
@@ -95,16 +99,20 @@
     <section class="container section" id="portfolio">
       <div class="row">
         <div class="col s12 m6 l4">
-          <img src="images/late_mountian.jpg" alt="first image" class="z-depth-4 responsive-img materialboxed">
+          <figure class="snip1091 navy"><img src="images/coffee_spill.jpg" alt="first image" class="z-depth-4 responsive-img materialboxed">
+            <figcaption>
+              <h5><span>JS</span> calculator</h5>
+            </figcaption<a href="#"></a>
+          </figure>
         </div>
         <div class="col s12 m5 l6 offset-l1 offset-m1">
-          <h3 class="text-darken-4">Showcase 1</h3>
+          <h3 class="text-darken-4">Javascript Calculator</h3>
           <p class="pbody">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s</p>
         </div>
       </div>
       <div class="row">
         <div class="col s12 m6 l4 push-l7 push-m7 offset-l1">
-          <img src="images/misty_ledge.jpg" alt="second image" class="z-depth-4 responsive-img materialboxed">
+          <img src="images/black_beach.jpg" alt="second image" class="z-depth-4 responsive-img materialboxed">
         </div>
         <div class="col s12 m6 l5 pull-l4 pull-m6">
           <h3 class="text-darken-4 right-align">Showcase 2</h3>
@@ -113,7 +121,7 @@
       </div>
       <div class="row">
         <div class="col s12 m6 l4">
-          <img src="images/foggy_ridge.jpg" alt="third image" class="z-depth-4 responsive-img materialboxed">
+          <img src="images/fire_food.jpg" alt="third image" class="z-depth-4 responsive-img materialboxed">
         </div>
         <div class="col s12 m5 l6 offset-l1 offset-m1">
           <h3 class="text-darken-4">Showcase 3</h3>
