--- a/home.html
+++ b/home.html
@@ -97,9 +97,10 @@
 
   <!-- Showcase / Grid-->
     <section class="container section" id="portfolio">
+      <!-- Case1 -->
       <div class="row">
         <div class="col s12 m6 l4">
-          <figure class="snip1091 navy"><img src="images/coffee_spill.jpg" alt="first image" class="z-depth-4 responsive-img materialboxed">
+          <figure class="snip1091 navy"><img src="images/coffee_spill.jpg" alt="first image" class="responsive-img">
             <figcaption>
               <h5><span>JS</span> calculator</h5>
             </figcaption<a href="#"></a>
@@ -110,18 +111,28 @@
           <p class="pbody">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s</p>
         </div>
       </div>
+      <!-- Case2-->
       <div class="row">
         <div class="col s12 m6 l4 push-l7 push-m7 offset-l1">
-          <img src="images/black_beach.jpg" alt="second image" class="z-depth-4 responsive-img materialboxed">
+          <figure class="snip1091 navy"><img src="images/black_beach.jpg" alt="second image" class="responsive-img">
+            <figcaption>
+              <h5><span>JS</span> calculator</h5>
+            </figcaption<a href="#"></a>
+          </figure>
         </div>
         <div class="col s12 m6 l5 pull-l4 pull-m6">
           <h3 class="text-darken-4 right-align">Showcase 2</h3>
           <p class="pbody">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s</p>
         </div>
       </div>
+      <!-- Case3-->
       <div class="row">
         <div class="col s12 m6 l4">
-          <img src="images/fire_food.jpg" alt="third image" class="z-depth-4 responsive-img materialboxed">
+          <figure class="snip1091 navy"><img src="images/fire_food.jpg" alt="third image" class="responsive-img">
+            <figcaption>
+              <h5><span>Lorem</span> Ipsum</h5>
+            </figcaption<a href="#"></a>
+          </figure>
         </div>
         <div class="col s12 m5 l6 offset-l1 offset-m1">
           <h3 class="text-darken-4">Showcase 3</h3>
