trying out devicons

--- a/home.html
+++ b/home.html
@@ -19,6 +19,7 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-rc.2/css/materialize.min.css">
+    <link rel="stylesheet" href="https://cdn.rawgit.com/konpa/devicon/df6431e323547add1b4cf45992913f15286456d3/devicon.min.css">
     <link rel="shortcut icon" href="support_files/images/flag.png" type="image/x-icon">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="support_files/port.css">
@@ -116,7 +117,7 @@
         <div class="col s12 m6 l4 push-l7 push-m7 offset-l1">
           <figure class="snip1091 navy"><img src="images/black_beach.jpg" alt="second image" class="responsive-img">
             <figcaption>
-              <h5><span>JS</span> calculator</h5>
+              <h5><span>Lorem</span> Ipsum</h5>
             </figcaption<a href="#"></a>
           </figure>
         </div>
@@ -186,6 +187,18 @@
               <p class="pbody">Mauris dolor augue, vulputate in pharetra ac, facilisis nec libero. Fusce condimentum gravida urna, vitae scelerisque erat ornare nec. Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s</p>
           </div>
           </div>
+        </div>
+        <hr>
+        <h4 class="text-center">My Growing list of Skills include:</h4>
+        <div class="col s10 m10 l8 skills center">
+          <ul>
+              <li><i class="devicon-css3-plain-wordmark"></i></li>
+              <li><i class="devicon-html5-plain-wordmark"></i></li>
+              <li><i class="devicon-javascript-plain"></i></li>
+              <li><i class="devicon-bootstrap-plain-wordmark"></i></li>
+              <li><i class="devicon-jquery-plain-wordmark"></i></li>
+              <li><i class="devicon-github-plain-wordmark"></i></li>
+          </ul>
         </div>
       </div>
     </section>
