cool animation for nav links

--- a/home.html
+++ b/home.html
@@ -36,12 +36,12 @@
         <nav class="aa-nav back2 back1">
             <img class="aa-nav-icon" src="support_files/images/flag.png"/>
 
-            <ul class="aa-nav-items right">
+            <ul class="aa-nav-items right snip1226">
               <strong class="link">
-                <li><a class="font-color2 font-color1" href="#title">Home</a></li>
-                <li><a class="font-color2 font-color1" href="">Resume</a></li>
-                <li><a class="font-color2 font-color1" href="#about">About</a></li>
-                <li><a class="font-color2 font-color1" href="">Contact</a></li>
+                <li><a class="font-color2 font-color1" href="#title" data-hover="Home">Home</a></li>
+                <li><a class="font-color2 font-color1" href="#" data-hover="Resume">Resume</a></li>
+                <li><a class="font-color2 font-color1" href="#about" data-hover="About">About</a></li>
+                <li><a class="font-color2 font-color1" href="#" data-hover="Contact">Contact</a></li>
               </strong>
             </ul>
 
