--- a/home.html
+++ b/home.html
@@ -35,16 +35,19 @@
 <!-- Navbar -->
         <nav class="aa-nav back2 back1">
             <img class="aa-nav-icon" src="support_files/images/flag.png"/>
-
+            <!-- favicons -->
+          </ul>
+          <ul class="aa-nav-items right">
+          <li><a class="font-color2 font-color1" href="https://twitter.com/AMawhinn" target="_blank"><i class="fa fa-twitter"></i></a></li>
+          </ul>
+          <!-- links -->
             <ul class="aa-nav-items right snip1226">
-              <strong class="link">
+              <b class="link">
                 <li><a class="font-color2 font-color1" href="#title" data-hover="Home">Home</a></li>
                 <li><a class="font-color2 font-color1" href="#" data-hover="Resume">Resume</a></li>
                 <li><a class="font-color2 font-color1" href="#about" data-hover="About">About</a></li>
                 <li><a class="font-color2 font-color1" href="#" data-hover="Contact">Contact</a></li>
-              </strong>
-            </ul>
-
+              </b>
         </nav>
         <div class="aa-hamburger-menu collapsed" id="hamburgerMenu" onclick="toggleMenu()">
             <span class="aa-icon-bar"></span>
@@ -57,15 +60,15 @@
         <div class="aa-mobile-overlay">
             <ul class="aa-mobile-nav-items">
                 <li><a href="#title">Home</a></li>
-                <li><a href="">Resume</a></li>
+                <li><a href="#">Resume</a></li>
                 <li><a href="#about">About</a></li>
-                <li><a href="">Contact</a></li>
+                <li><a href="#">Contact</a></li>
                 <!-- <hr></hr> -->
-                <li><a href="">Twitter</a></li>
-                <li><a href="">Code Pen</a></li>
-                <li><a href="">Github</a></li>
-                <li><a href="">freeCodeCamp</a></li>
-                <li><a href="">Blog</a></li>
+                <li><a href="#">Twitter</a></li>
+                <li><a href="#">Code Pen</a></li>
+                <li><a href="#">Github</a></li>
+                <li><a href="#">freeCodeCamp</a></li>
+                <li><a href="#">Blog</a></li>
             </ul>
         </div>
 <!-- /Navbar -->
