--- a/home.html
+++ b/home.html
@@ -172,21 +172,21 @@
           <!-- tabs -->
           <ul class="tabs">
             <li class="tab col s6">
-              <a href="#web-developer" class="active grey-text text-darken-4">Web Developer</a>
+              <a href="#present" class="active grey-text text-darken-4">Present</a>
             </li>
             <li class="tab col s6">
-              <a href="#editing" class="grey-text text-darken-4">Editing</a>
+              <a href="#future" class="grey-text text-darken-4">Future</a>
             </li>
           </ul>
           <hr>
-          <div id="web-developer" class="col s12">
-              <p class="flow-text grey-text text-darken-4" id="tab1">Web Developer</p>
-              <p class="pbody">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum at lacus congue, suscipit elit nec, tincidunt orci.</p>
+          <div id="present" class="col s12">
+              <p class="flow-text grey-text text-darken-4" id="tab1">What I'm learning</p>
+              <p class="pbody">Vanilla Javascript is what I am drilling on at the moment. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum at lacus congue, suscipit elit nec, tincidunt orci.</p>
               <p class="pbody">Mauris dolor augue, vulputate in pharetra ac, facilisis nec libero. Fusce condimentum gravida urna, vitae scelerisque erat ornare nec.</p>
           </div>
-          <div id="editing" class="col s12">
-              <p class="flow-text grey-text text-darken-4" id="tab1">Editing</p>
-              <p class="pbody">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum at lacus congue, suscipit elit nec, tincidunt orci.</p>
+          <div id="future" class="col s12">
+              <p class="flow-text grey-text text-darken-4" id="tab1">Future skills</p>
+              <p class="pbody">React is where the future lies and that's where I'm going.  Vue JS looks fun as well and something I don't want to pass up.  Python has always been a language I would love to master.  The SBC Raspberry Pi was built for Python. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum at lacus congue, suscipit elit nec, tincidunt orci.</p>
               <p class="pbody">Mauris dolor augue, vulputate in pharetra ac, facilisis nec libero. Fusce condimentum gravida urna, vitae scelerisque erat ornare nec. Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s</p>
           </div>
           </div>
