adding favicon bar for large screens

--- a/home.html
+++ b/home.html
@@ -35,15 +35,10 @@
 <!-- Navbar -->
         <nav class="aa-nav back2 back1">
             <img class="aa-nav-icon" src="support_files/images/flag.png"/>
-            <!-- favicons -->
-          </ul>
-          <ul class="aa-nav-items right">
-          <li><a class="font-color2 font-color1" href="https://twitter.com/AMawhinn" target="_blank"><i class="fa fa-twitter"></i></a></li>
-          </ul>
           <!-- links -->
             <ul class="aa-nav-items right snip1226">
               <b class="link">
-                <li><a class="font-color2 font-color1" href="#title" data-hover="Home">Home</a></li>
+                <li><a class="font-color2 font-color1" href="#" data-hover="Home">Home</a></li>
                 <li><a class="font-color2 font-color1" href="#" data-hover="Resume">Resume</a></li>
                 <li><a class="font-color2 font-color1" href="#about" data-hover="About">About</a></li>
                 <li><a class="font-color2 font-color1" href="#" data-hover="Contact">Contact</a></li>
@@ -59,7 +54,7 @@
         <hr></strong></h4>-->
         <div class="aa-mobile-overlay">
             <ul class="aa-mobile-nav-items">
-                <li><a href="#title">Home</a></li>
+                <li><a href="#">Home</a></li>
                 <li><a href="#">Resume</a></li>
                 <li><a href="#about">About</a></li>
                 <li><a href="#">Contact</a></li>
@@ -68,7 +63,6 @@
                 <li><a href="#">Code Pen</a></li>
                 <li><a href="#">Github</a></li>
                 <li><a href="#">freeCodeCamp</a></li>
-                <li><a href="#">Blog</a></li>
             </ul>
         </div>
 <!-- /Navbar -->
@@ -93,6 +87,20 @@
 </header>
 
 <body>
+
+
+  <!-- SideNavbar -->
+  <div class="mySidenav hide-on-med-and-down">
+    <a class="sn" href="https://twitter.com/AMawhinn" target="_blank" id="twitter"><i class="fa fa-twitter"></i></a>
+    <a class="sn" href="https://github.com/mawhinn" target="_blank" id="github"><i class="fa fa-github"></i></a>
+    <a class="sn" href="https://codepen.io/mawhinn/" target="_blank" id="codepen"><i class="fa fa-codepen"></i></a>
+    <a class="sn" href="https://www.linkedin.com/in/andrewjmawhinney/" target="_blank" id="linkedin"><i class="fa fa-linkedin"></i></a>
+  </div>
+  <!-- /SideNavbar -->
+
+<!--<li><a href="https://twitter.com/AMawhinn" target="_blank"><i class="fa fa-twitter"></i></a></li>-->
+
+
   <div class="container">
     <hr>
     <h2 class="text-center">Welcome to my space.<br>Where my work is showcased.</h2>
@@ -223,7 +231,7 @@
     <div class="section container">
       <div class="col s5 psh-s7"></div>
         <div id="body">
-          <h3>Lorem ipsum dolor sit amet:</h3>
+          <h3>Contact Me:</h3>
           <p class="pbody">Keeping life as simple as it should be while staying pationate about the things that matter. Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
           <p class="pbody">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
         </div>
