--- a/home.html
+++ b/home.html
@@ -19,6 +19,7 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-rc.2/css/materialize.min.css">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.rawgit.com/konpa/devicon/df6431e323547add1b4cf45992913f15286456d3/devicon.min.css">
     <link rel="shortcut icon" href="support_files/images/flag.png" type="image/x-icon">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -37,12 +38,12 @@
             <img class="aa-nav-icon" src="support_files/images/flag.png"/>
           <!-- links -->
             <ul class="aa-nav-items right snip1226">
-              <b class="link">
+              <span class="link">
                 <li><a class="font-color2 font-color1" href="#" data-hover="Home">Home</a></li>
                 <li><a class="font-color2 font-color1" href="#" data-hover="Resume">Resume</a></li>
                 <li><a class="font-color2 font-color1" href="#about" data-hover="About">About</a></li>
-                <li><a class="font-color2 font-color1" href="#" data-hover="Contact">Contact</a></li>
-              </b>
+                <li><a class="font-color2 font-color1" href="#contact" data-hover="Contact">Contact</a></li>
+              </span>
         </nav>
         <div class="aa-hamburger-menu collapsed" id="hamburgerMenu" onclick="toggleMenu()">
             <span class="aa-icon-bar"></span>
@@ -57,12 +58,12 @@
                 <li><a href="#">Home</a></li>
                 <li><a href="#">Resume</a></li>
                 <li><a href="#about">About</a></li>
-                <li><a href="#">Contact</a></li>
+                <li><a href="#contact">Contact</a></li>
                 <!-- <hr></hr> -->
-                <li><a href="#">Twitter</a></li>
-                <li><a href="#">Code Pen</a></li>
-                <li><a href="#">Github</a></li>
-                <li><a href="#">freeCodeCamp</a></li>
+                <li><a href="https://twitter.com/AMawhinn">Twitter</a></li>
+                <li><a href="https://github.com/mawhinn"></a>Github</li>
+                <li><a href="https://codepen.io/mawhinn/">Code Pen</a></li>
+                <li><a href="https://www.linkedin.com/in/andrewjmawhinney/">Linkedin</a></li>
             </ul>
         </div>
 <!-- /Navbar -->
@@ -228,6 +229,56 @@
     </div>
 
   <!-- /Parallax2 -->
+
+  <!-- contact form -->
+    <section class="section container scrollspy" id="contact">
+      <div class="row">
+        <div class="col s12 l5">
+          <h3>Get in Touch</h3>
+          <p class="pbody">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum at lacus congue, suscipit elit nec, tincidunt orci.</p>
+          <p class="pbody">Mauris dolor augue, vulputate in pharetra ac, facilisis nec libero. Fusce condimentum gravida urna, vitae scelerisque erat ornare nec.</p>
+          </div>
+        <div class="col s12 l5 offset-l2">
+          <form>
+            <div class="input-field">
+              <i class="material-icons prefix">email</i>
+              <input type="email" id="email">
+              <label for="email">Your Email</label>
+            </div>
+            <div class="input-field">
+              <i class="material-icons prefix">message</i>
+              <textarea id="message" class="materialize-textarea" cols="20" rows="20"></textarea>
+              <label for="message">Your Message</label>
+            </div>
+            <div class="input-field">
+              <i class="material-icons prefix">calendar_today</i>
+              <input type="text" id="date" class="datepicker">
+              <label for="date">Choose a date you need me for...</label>
+            </div>
+            <div class="input-field">
+              <p>Services required:</p>
+              <p>
+                <label>
+                  <input type="checkbox">
+                  <span>Looking to hire</span>
+                </label>
+              </p>
+              <p>
+                <label>
+                  <input type="checkbox">
+                  <span>Just saying "hi"</span>
+                </label>
+              </p>
+            </div>
+            <div class="input-field center">
+              <button class="btn grey darken-3">Submit</button>
+            </div>
+          </form>
+        </div>
+      </div>
+    </section>
+  <!-- / Contact Form -->
+<!--
     <div class="section container">
       <div class="col s5 psh-s7"></div>
         <div id="body">
@@ -236,6 +287,7 @@
           <p class="pbody">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
         </div>
       </div>
+-->
   <!-- JS Sheets -->
     <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-rc.2/js/materialize.min.js"></script>
