fixing misplaced text in mobile nav

--- a/home.html
+++ b/home.html
@@ -61,7 +61,7 @@
                 <li><a href="#contact">Contact</a></li>
                 <!-- <hr></hr> -->
                 <li><a href="https://twitter.com/AMawhinn">Twitter</a></li>
-                <li><a href="https://github.com/mawhinn"></a>Github</li>
+                <li><a href="https://github.com/mawhinn">Github</a></li>
                 <li><a href="https://codepen.io/mawhinn/">Code Pen</a></li>
                 <li><a href="https://www.linkedin.com/in/andrewjmawhinney/">Linkedin</a></li>
             </ul>
