social icons for med & sm screens

--- a/home.html
+++ b/home.html
@@ -37,7 +37,7 @@
         <nav class="aa-nav back2 back1">
             <img class="aa-nav-icon" src="support_files/images/flag.png"/>
           <!-- links -->
-            <ul class="aa-nav-items right snip1226">
+            <ul class="aa-nav-items right flip">
               <span class="link">
                 <li><a class="font-color2 font-color1" href="#" data-hover="Home">Home</a></li>
                 <li><a class="font-color2 font-color1" href="#" data-hover="Resume">Resume</a></li>
@@ -104,7 +104,7 @@
 
   <div class="container">
     <hr>
-    <h2 class="text-center">Welcome to my space.<br>Where my work is showcased.</h2>
+    <h3 class="text-center">Welcome to my space.<br>Where my work is showcased.</h3>
     <hr>
   </div>
 
@@ -120,7 +120,7 @@
           </figure>
         </div>
         <div class="col s12 m5 l6 offset-l1 offset-m1">
-          <h3 class="text-darken-4">Javascript Calculator</h3>
+          <h4 class="text-darken-4">Javascript Calculator</h4>
           <p class="pbody">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s</p>
         </div>
       </div>
@@ -134,7 +134,7 @@
           </figure>
         </div>
         <div class="col s12 m6 l5 pull-l4 pull-m6">
-          <h3 class="text-darken-4 right-align">Showcase 2</h3>
+          <h4 class="text-darken-4 right-align">Showcase 2</h4>
           <p class="pbody">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s</p>
         </div>
       </div>
@@ -148,7 +148,7 @@
           </figure>
         </div>
         <div class="col s12 m5 l6 offset-l1 offset-m1">
-          <h3 class="text-darken-4">Showcase 3</h3>
+          <h4 class="text-darken-4">Showcase 3</h4>
           <p class="pbody">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s</p>
         </div>
       </div>
@@ -173,7 +173,7 @@
     <section class="section container" id="about">
       <div class="row">
         <div class="col s12 l4">
-          <h3 class="grey-text text-darken-4">About me..</h3>
+          <h4 class="grey-text text-darken-4">About me..</h4>
           <p class="pbody">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum at lacus congue, suscipit elit nec, tincidunt orci.</p>
           <p class="pbody">Mauris dolor augue, vulputate in pharetra ac, facilisis nec libero. Fusce condimentum gravida urna, vitae scelerisque erat ornare nec.</p>
         </div>
@@ -230,11 +230,26 @@
 
   <!-- /Parallax2 -->
 
+  <!-- Social -->
+  <div class="section grey darken-4 hide-on-large-only">
+    <div class="row">
+      <div class="col s12 l5">
+        <ul class="social-bar center">
+          <li><a href="https://twitter.com/AMawhinn" target="_blank"><i class="fa fa-twitter"></i></a></li>
+          <li><a href="https://github.com/mawhinn" target="_blank"><i class="fa fa-github"></i></a></li>
+          <li><a href="https://codepen.io/mawhinn/" target="_blank"><i class="fa fa-codepen"></i></a></li>
+          <li><a href="https://www.linkedin.com/in/andrewjmawhinney/" target="_blank"><i class="fa fa-linkedin"></i></a></li>
+        </ul>
+      </div>
+    </div>
+  </div>
+  <!-- /Social -->
+
   <!-- contact form -->
     <section class="section container scrollspy" id="contact">
       <div class="row">
         <div class="col s12 l5">
-          <h3>Get in Touch</h3>
+          <h4>Get in Touch</h4>
           <p class="pbody">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum at lacus congue, suscipit elit nec, tincidunt orci.</p>
           <p class="pbody">Mauris dolor augue, vulputate in pharetra ac, facilisis nec libero. Fusce condimentum gravida urna, vitae scelerisque erat ornare nec.</p>
           </div>
