adding smooth scrolling or scrollspy

--- a/home.html
+++ b/home.html
@@ -39,7 +39,7 @@
           <!-- links -->
             <ul class="aa-nav-items right flip">
               <span class="link">
-                <li><a class="font-color2 font-color1" href="#" data-hover="Home">Home</a></li>
+                <li><a class="font-color2 font-color1" href="#home" data-hover="Home">Home</a></li>
                 <li><a class="font-color2 font-color1" href="#" data-hover="Resume">Resume</a></li>
                 <li><a class="font-color2 font-color1" href="#about" data-hover="About">About</a></li>
                 <li><a class="font-color2 font-color1" href="#contact" data-hover="Contact">Contact</a></li>
@@ -55,7 +55,7 @@
         <hr></strong></h4>-->
         <div class="aa-mobile-overlay">
             <ul class="aa-mobile-nav-items">
-                <li><a href="#">Home</a></li>
+                <li><a href="#home">Home</a></li>
                 <li><a href="#">Resume</a></li>
                 <li><a href="#about">About</a></li>
                 <li><a href="#contact">Contact</a></li>
@@ -67,7 +67,7 @@
             </ul>
         </div>
 <!-- /Navbar -->
-
+      <div class="scrollspy" id="home">
         <div id="title" class="hide-on-med-and-down">
             <h1 class="roww item1 flow-text col s12 m12">A collection of works <br> Built and designed by <br>Andrew Mawhinney</h1>
         </div>
@@ -84,7 +84,7 @@
         <hr></strong></h4>-->
         <div class="hero hide-on-small-only"></div>
         <div class="ero-after hide-on-med-and-up"></div>
-
+      </div>
 </header>
 
 <body>
@@ -109,7 +109,7 @@
   </div>
 
   <!-- Showcase / Grid-->
-    <section class="container section" id="portfolio">
+    <section class="container section scrollspy" id="portfolio">
       <!-- Case1 -->
       <div class="row">
         <div class="col s12 m6 l4">
@@ -168,9 +168,9 @@
     </div>
   <!-- /Parallax1 -->
 
-  <!-- services / tabs -->
+  <!-- About / tabs -->
 
-    <section class="section container" id="about">
+    <section class="section container scrollspy" id="about">
       <div class="row">
         <div class="col s12 l4">
           <h4 class="grey-text text-darken-4">About me..</h4>
@@ -214,7 +214,7 @@
         </div>
       </div>
     </section>
-  <!-- /services-->
+  <!-- /About-->
 
   <!-- Parallax2 -->
 
@@ -246,7 +246,7 @@
   <!-- /Social -->
 
   <!-- contact form -->
-    <section class="section container scrollspy" id="contact">
+    <section class="section container scrollspy scrollspy" id="contact">
       <div class="row">
         <div class="col s12 l5">
           <h4>Get in Touch</h4>
