moving mobile social icons to nav menu

--- a/home.html
+++ b/home.html
@@ -60,10 +60,10 @@
                 <li><a href="#about">About</a></li>
                 <li><a href="#contact">Contact</a></li>
                 <!-- <hr></hr> -->
-                <li><a href="https://twitter.com/AMawhinn">Twitter</a></li>
-                <li><a href="https://github.com/mawhinn">Github</a></li>
-                <li><a href="https://codepen.io/mawhinn/">Code Pen</a></li>
-                <li><a href="https://www.linkedin.com/in/andrewjmawhinney/">Linkedin</a></li>
+                <li><a href="https://twitter.com/AMawhinn"><i class="fa fa-twitter"></i></a></li>
+                <li><a href="https://github.com/mawhinn"><i class="fa fa-github"></i></a></li>
+                <li><a href="https://codepen.io/mawhinn/"><i class="fa fa-codepen"></i></a></li>
+                <li><a href="https://www.linkedin.com/in/andrewjmawhinney/"><i class="fa fa-linkedin"></i></a></li>
             </ul>
         </div>
 <!-- /Navbar -->
@@ -229,21 +229,6 @@
     </div>
 
   <!-- /Parallax2 -->
-
-  <!-- Social -->
-  <div class="section grey darken-4 hide-on-large-only">
-    <div class="row">
-      <div class="col s12 l5">
-        <ul class="social-bar center">
-          <li><a href="https://twitter.com/AMawhinn" target="_blank"><i class="fa fa-twitter"></i></a></li>
-          <li><a href="https://github.com/mawhinn" target="_blank"><i class="fa fa-github"></i></a></li>
-          <li><a href="https://codepen.io/mawhinn/" target="_blank"><i class="fa fa-codepen"></i></a></li>
-          <li><a href="https://www.linkedin.com/in/andrewjmawhinney/" target="_blank"><i class="fa fa-linkedin"></i></a></li>
-        </ul>
-      </div>
-    </div>
-  </div>
-  <!-- /Social -->
 
   <!-- contact form -->
     <section class="section container scrollspy scrollspy" id="contact">
