moved icons to footer on med & sm screens

--- a/home.html
+++ b/home.html
@@ -104,7 +104,7 @@
 
   <div class="container">
     <hr>
-    <h3 class="text-center">Welcome to my space.<br>Where my work is showcased.</h3>
+    <h3 class="text-center">Welcome to my work space.</h3>
     <hr>
   </div>
 
@@ -115,12 +115,12 @@
         <div class="col s12 m6 l4">
           <figure class="snip1091 navy"><img src="images/coffee_spill .jpg" alt="first image" class="responsive-img">
             <figcaption>
-              <h5><span>JS</span> calculator</h5>
+              <h5><span>Lorem</span> Ipsum</h5>
             </figcaption<a href="#"></a>
           </figure>
         </div>
         <div class="col s12 m5 l6 offset-l1 offset-m1">
-          <h4 class="text-darken-4">Javascript Calculator</h4>
+          <h4 class="text-darken-4">Showcase 1</h4>
           <p class="pbody">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s</p>
         </div>
       </div>
@@ -174,7 +174,7 @@
       <div class="row">
         <div class="col s12 l4">
           <h4 class="grey-text text-darken-4">About me..</h4>
-          <p class="pbody">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum at lacus congue, suscipit elit nec, tincidunt orci.</p>
+          <p class="pbody">I majored in IT until I found my passion for code in late 2017. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum at lacus congue, suscipit elit nec, tincidunt orci.</p>
           <p class="pbody">Mauris dolor augue, vulputate in pharetra ac, facilisis nec libero. Fusce condimentum gravida urna, vitae scelerisque erat ornare nec.</p>
         </div>
         <div class="col s12 l6 offset-l2">
@@ -190,7 +190,7 @@
           <hr>
           <div id="present" class="col s12">
               <p class="flow-text grey-text text-darken-4" id="tab1">What I'm learning</p>
-              <p class="pbody">Vanilla Javascript is what I am drilling on at the moment. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum at lacus congue, suscipit elit nec, tincidunt orci.</p>
+              <p class="pbody">Vanilla Javascript is what I am drilling on at the moment. I am comforotable with HTML and CSS but I love learning new tricks behiend them. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum at lacus congue, suscipit elit nec, tincidunt orci.</p>
               <p class="pbody">Mauris dolor augue, vulputate in pharetra ac, facilisis nec libero. Fusce condimentum gravida urna, vitae scelerisque erat ornare nec.</p>
           </div>
           <div id="future" class="col s12">
@@ -294,6 +294,20 @@
   <!-- /JS Sheets -->
 <footer class="container text-center">
   <hr>
+  <!-- Social -->
+   <div class="hide-on-large-only">
+     <div class="row">
+       <div class="col s12 l5">
+         <ul class="social-bar center">
+           <li><a href="https://twitter.com/AMawhinn" target="_blank"><i class="fa fa-twitter"></i></a></li>
+           <li><a href="https://github.com/mawhinn" target="_blank"><i class="fa fa-github"></i></a></li>
+           <li><a href="https://codepen.io/mawhinn/" target="_blank"><i class="fa fa-codepen"></i></a></li>
+           <li><a href="https://www.linkedin.com/in/andrewjmawhinney/" target="_blank"><i class="fa fa-linkedin"></i></a></li>
+         </ul>
+       </div>
+     </div>
+   </div>
+   <!-- /Social -->
   <h6>Copyright &copy andrewmawhinney.com | All Rights Reserved - 2018</h6>
   <p>This site is powered by a <a href="https://www.raspberrypi.org/" target="_blank" class="link blue-grey-text text-darken-1">raspberry pi!</a> | <strong><i class="fa fa-code"></i></strong> with <strong><i class="fa fa-coffee"></i></strong> by Andrew Mawhinney</p>
   <hr>
