A bit of code clean up

--- a/home.html
+++ b/home.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <!-- ================================================
-    Project:    Andrew Mawhinney Construction page
-    Version:    1.0
+    Project:    Andrew Mawhinney Portfolio page
+    Version:    3.0
     Author:     Andrew Mawhinney
     Owner:      Andrew Mawhinney  -  http://andrewmawhinney.com/
-    Email:      ajmawhinn@gmail.com
+    Email:      andrew@andrewmawhinney.com
     Follow:     https://twitter.com/AMawhinn
 ===================================================-->
 <html lang="en">
@@ -50,9 +50,7 @@
             <span class="aa-icon-bar"></span>
             <span class="aa-icon-bar"></span>
         </div>
-    <!-- Mobile Overlay -->        <!--<h4 class=" container roww sub-title flow-text col s12 m6 item2 hide-on-med-and-down"><strong>The bit of what I do is done not because I have to do it; <br>
-        But because I can do it.  That's what drives me.
-        <hr></strong></h4>-->
+
         <div class="aa-mobile-overlay">
             <ul class="aa-mobile-nav-items">
                 <li><a href="#home">Home</a></li>
@@ -79,9 +77,7 @@
         <div id="title" class="hide-on-med-and-up">
             <h1 class="roww item3 flow-text col s12 m12">A collection of works <br> Built and designed by <br>Andrew Mawhinney</h1>
         </div>
-        <!--<h4 class=" container roww sub-title flow-text col s12 m6 item2 hide-on-med-and-down"><strong>The bit of what I do is done not because I have to do it; <br>
-        But because I can do it.  That's what drives me.
-        <hr></strong></h4>-->
+
         <div class="hero hide-on-small-only"></div>
         <div class="ero-after hide-on-med-and-up"></div>
       </div>
@@ -99,9 +95,6 @@
   </div>
   <!-- /SideNavbar -->
 
-<!--<li><a href="https://twitter.com/AMawhinn" target="_blank"><i class="fa fa-twitter"></i></a></li>-->
-
-
   <div class="container">
     <hr>
     <h3 class="text-center">Welcome to my work space.</h3>
@@ -113,7 +106,7 @@
       <!-- Case1 -->
       <div class="row">
         <div class="col s12 m6 l4">
-          <figure class="snip1091 navy"><img src="images/coffee_spill .jpg" alt="first image" class="responsive-img">
+          <figure class="tilt navy"><img src="images/coffee_spill .jpg" alt="first image" class="responsive-img">
             <figcaption>
               <h5><span>Lorem</span> Ipsum</h5>
             </figcaption<a href="#"></a>
@@ -127,7 +120,7 @@
       <!-- Case2-->
       <div class="row">
         <div class="col s12 m6 l4 push-l7 push-m7 offset-l1">
-          <figure class="snip1091 navy"><img src="images/black_beach.jpg" alt="second image" class="responsive-img">
+          <figure class="tilt navy"><img src="images/black_beach.jpg" alt="second image" class="responsive-img">
             <figcaption>
               <h5><span>Lorem</span> Ipsum</h5>
             </figcaption<a href="#"></a>
@@ -141,7 +134,7 @@
       <!-- Case3-->
       <div class="row">
         <div class="col s12 m6 l4">
-          <figure class="snip1091 navy"><img src="images/fire_food.jpg" alt="third image" class="responsive-img">
+          <figure class="tilt navy"><img src="images/fire_food.jpg" alt="third image" class="responsive-img">
             <figcaption>
               <h5><span>Lorem</span> Ipsum</h5>
             </figcaption<a href="#"></a>
@@ -153,10 +146,10 @@
         </div>
       </div>
     </section>
+
   <!-- /Showcase / Grid-->
 
-  <!-- Parallax1 <div class="parallax1 hide-on-med-and-up"></div>-->
-
+  <!-- Parallax1 -->
     <div class="parallax-container hide-on-small-only">
       <h1 class="parallax-title">A nice parallax</h1>
       <div class="parallax">
@@ -278,20 +271,12 @@
       </div>
     </section>
   <!-- / Contact Form -->
-<!--
-    <div class="section container">
-      <div class="col s5 psh-s7"></div>
-        <div id="body">
-          <h3>Contact Me:</h3>
-          <p class="pbody">Keeping life as simple as it should be while staying pationate about the things that matter. Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-          <p class="pbody">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
-        </div>
-      </div>
--->
+
   <!-- JS Sheets -->
     <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-rc.2/js/materialize.min.js"></script>
   <!-- /JS Sheets -->
+  
 <footer class="container text-center">
   <hr>
   <!-- Social -->
