added pdf as test resume

--- a/home.html
+++ b/home.html
@@ -40,7 +40,7 @@
             <ul class="aa-nav-items right flip">
               <span class="link">
                 <li><a class="font-color2 font-color1" href="#home" data-hover="Home">Home</a></li>
-                <li><a class="font-color2 font-color1" href="#" data-hover="Resume">Resume</a></li>
+                <li><a class="font-color2 font-color1" href="support_files/pdf-sample.pdf" target="_blank" data-hover="Resume">Resume</a></li>
                 <li><a class="font-color2 font-color1" href="#about" data-hover="About">About</a></li>
                 <li><a class="font-color2 font-color1" href="#contact" data-hover="Contact">Contact</a></li>
               </span>
@@ -276,7 +276,7 @@
     <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-rc.2/js/materialize.min.js"></script>
   <!-- /JS Sheets -->
-  
+
 <footer class="container text-center">
   <hr>
   <!-- Social -->
