--- a/home.html
+++ b/home.html
@@ -54,7 +54,7 @@
         <div class="aa-mobile-overlay">
             <ul class="aa-mobile-nav-items">
                 <li><a href="#home">Home</a></li>
-                <li><a href="#">Resume</a></li>
+                <li><a href="support_files/pdf-sample.pdf" target="_blank">Resume</a></li>
                 <li><a href="#about">About</a></li>
                 <li><a href="#contact">Contact</a></li>
                 <!-- <hr></hr> -->
