consistant img size in showcase

--- a/home.html
+++ b/home.html
@@ -106,7 +106,7 @@
       <!-- Case1 -->
       <div class="row">
         <div class="col s12 m6 l4">
-          <figure class="tilt navy"><img src="images/coffee_spill .jpg" alt="first image" class="responsive-img">
+          <figure class="tilt navy"><img src="images/coffee_spill .jpg" alt="first image" class="img responsive-img">
             <figcaption>
               <h5><span>Lorem</span> Ipsum</h5>
             </figcaption<a href="#"></a>
@@ -120,7 +120,7 @@
       <!-- Case2-->
       <div class="row">
         <div class="col s12 m6 l4 push-l7 push-m7 offset-l1">
-          <figure class="tilt navy"><img src="images/black_beach.jpg" alt="second image" class="responsive-img">
+          <figure class="tilt navy"><img src="images/black_beach.jpg" alt="second image" class="img responsive-img">
             <figcaption>
               <h5><span>Lorem</span> Ipsum</h5>
             </figcaption<a href="#"></a>
@@ -134,7 +134,7 @@
       <!-- Case3-->
       <div class="row">
         <div class="col s12 m6 l4">
-          <figure class="tilt navy"><img src="images/fire_food.jpg" alt="third image" class="responsive-img">
+          <figure class="tilt navy"><img src="images/fire_food.jpg" alt="third image" class="img responsive-img">
             <figcaption>
               <h5><span>Lorem</span> Ipsum</h5>
             </figcaption<a href="#"></a>
