--- a/home.html
+++ b/home.html
@@ -167,8 +167,8 @@
       <div class="row">
         <div class="col s12 l4">
           <h4 class="grey-text text-darken-4">About me..</h4>
-          <p class="pbody">I majored in IT until I found my passion for code in late 2017. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum at lacus congue, suscipit elit nec, tincidunt orci.</p>
-          <p class="pbody">Mauris dolor augue, vulputate in pharetra ac, facilisis nec libero. Fusce condimentum gravida urna, vitae scelerisque erat ornare nec.</p>
+          <p class="pbody">I majored in IT until I discovered my passion for code in late 2017. As I worked an IT job I took up coding on my own time.  Quickly my doors were blown open to all the possibilities of coding. My passion grew into obsesion as I would pour hours into code.</p>
+          <p class="pbody">Using resorces such as freeCodeCamp, YouTube and Udamy, I taught myself how to code effectively. Mauris dolor augue, vulputate in pharetra ac, facilisis nec libero. Fusce condimentum gravida urna, vitae scelerisque erat ornare nec.</p>
         </div>
         <div class="col s12 l6 offset-l2">
           <!-- tabs -->
