--- a/home.html
+++ b/home.html
@@ -97,7 +97,8 @@
 
   <div class="container">
     <hr>
-    <h3 class="text-center">Welcome to my work space.</h3>
+    <h3 class="text-center hide-on-small-only">Welcome to my work space.</h3>
+    <h4 class="text-center show-on-small hidden">Welcome to my work space.</h4>
     <hr>
   </div>
 
