box shadow tweeks, title changes

--- a/home.html
+++ b/home.html
@@ -152,7 +152,7 @@
 
   <!-- Parallax1 -->
     <div class="parallax-container hide-on-small-only">
-      <h1 class="parallax-title">A nice parallax</h1>
+      <h1 class="parallax-title">Who is this guy?</h1>
       <div class="parallax">
         <img src="images/parallax1.jpg" alt="lanterns" class="responsive-img hide-on-small-only">
       </div>
@@ -213,7 +213,7 @@
   <!-- Parallax2 -->
 
     <div class="parallax-container hide-on-small-only">
-      <h1 class="parallax-title">A nice parallax</h1>
+      <h1 class="parallax-title">Why not say "hi"</h1>
       <div class="parallax">
         <img src="images/parallax2.jpg" alt="Grey Moundians" class="responsive-img hide-on-small-only">
       </div>
