--- a/home.html
+++ b/home.html
@@ -82,7 +82,7 @@
         <div class="ero-after hide-on-med-and-up"></div>
       </div>
 </header>
-
+<main>
 <body>
 
 
@@ -107,7 +107,7 @@
       <!-- Case1 -->
       <div class="row">
         <div class="col s12 m6 l4">
-          <figure class="tilt navy"><img src="images/coffee_spill .jpg" alt="first image" class="img responsive-img">
+          <figure class="tilt navy"><img src="images/coffee_spill .jpg" alt="Outdoor Winter Coffee" class="img responsive-img">
             <figcaption>
               <h5><span>Lorem</span> Ipsum</h5>
             </figcaption<a href="#"></a>
@@ -121,7 +121,7 @@
       <!-- Case2-->
       <div class="row">
         <div class="col s12 m6 l4 push-l7 push-m7 offset-l1">
-          <figure class="tilt navy"><img src="images/black_beach.jpg" alt="second image" class="img responsive-img">
+          <figure class="tilt navy"><img src="images/black_beach.jpg" alt="Black Sands" class="img responsive-img">
             <figcaption>
               <h5><span>Lorem</span> Ipsum</h5>
             </figcaption<a href="#"></a>
@@ -135,7 +135,7 @@
       <!-- Case3-->
       <div class="row">
         <div class="col s12 m6 l4">
-          <figure class="tilt navy"><img src="images/fire_food.jpg" alt="third image" class="img responsive-img">
+          <figure class="tilt navy"><img src="images/fire_food.jpg" alt="Campfire meal" class="img responsive-img">
             <figcaption>
               <h5><span>Lorem</span> Ipsum</h5>
             </figcaption<a href="#"></a>
@@ -154,7 +154,7 @@
     <div class="parallax-container hide-on-small-only">
       <h1 class="parallax-title">Who is this guy?</h1>
       <div class="parallax">
-        <img src="images/parallax1.jpg" alt="lanterns" class="responsive-img hide-on-small-only">
+        <img src="images/parallax1.jpg" alt="White Mountians" class="responsive-img hide-on-small-only">
       </div>
     </div>
     <div class="parallax1 hide-on-med-and-up">
@@ -168,7 +168,7 @@
       <div class="row">
         <div class="col s12 l4">
           <h4 class="grey-text text-darken-4">About me..</h4>
-          <p class="pbody">I majored in IT until I discovered my passion for code in late 2017. As I worked an IT job I took up coding on my own time.  Quickly my doors were blown open to all the possibilities of coding. My passion grew into obsesion as I would pour hours into code.</p>
+          <p class="pbody">I majored in IT uns=""til I discovered my passion for code in late 2017. As I worked an IT job I took up coding on my own time.  Quickly my doors were blown open to all the possibilities of coding. My passion grew into obsesion as I would pour hours into code.</p>
           <p class="pbody">Using resorces such as freeCodeCamp, YouTube and Udamy, I taught myself how to code effectively. Mauris dolor augue, vulputate in pharetra ac, facilisis nec libero. Fusce condimentum gravida urna, vitae scelerisque erat ornare nec.</p>
         </div>
         <div class="col s12 l6 offset-l2">
@@ -278,7 +278,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-rc.2/js/materialize.min.js"></script>
     <script src="support_files/support.js" type="text/javascript"></script>
   <!-- /JS Sheets -->
-
+</main>
 <footer class="container text-center">
   <hr>
   <!-- Social -->
