--- a/home.html
+++ b/home.html
@@ -97,8 +97,8 @@
 
   <div class="container">
     <hr>
-    <h3 class="text-center hide-on-small-only">Welcome to my work space.</h3>
-    <h4 class="text-center show-on-small hidden">Welcome to my work space.</h4>
+    <h3 class="text-center hide-on-small-only">Developer & Designer</h3>
+    <h4 class="text-center show-on-small hidden">Developer & Designer</h4>
     <hr>
   </div>
 
@@ -168,8 +168,8 @@
       <div class="row">
         <div class="col s12 l4">
           <h4 class="grey-text text-darken-4">About me..</h4>
-          <p class="pbody">I majored in IT uns=""til I discovered my passion for code in late 2017. As I worked an IT job I took up coding on my own time.  Quickly my doors were blown open to all the possibilities of coding. My passion grew into obsesion as I would pour hours into code.</p>
-          <p class="pbody">Using resorces such as freeCodeCamp, YouTube and Udamy, I taught myself how to code effectively. Mauris dolor augue, vulputate in pharetra ac, facilisis nec libero. Fusce condimentum gravida urna, vitae scelerisque erat ornare nec.</p>
+          <p class="pbody">I majored in IT until I discovered my passion for code in late 2017. As I worked an IT job I took up coding on my own time.  Quickly my doors were blown open to all the possibilities of coding. My passion grew into obsesion as I would pour hours into code.</p>
+          <p class="pbody">Using resorces such as freeCodeCamp, YouTube and Udamy, I taught myself how to code effectively.</p>
         </div>
         <div class="col s12 l6 offset-l2">
           <!-- tabs -->
@@ -185,11 +185,11 @@
           <div id="present" class="col s12">
               <p class="flow-text grey-text text-darken-4" id="tab1">What I'm learning</p>
               <p class="pbody">Vanilla Javascript is what I am drilling on at the moment. I am comforotable with HTML and CSS but I love learning new tricks behiend them. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum at lacus congue, suscipit elit nec, tincidunt orci.</p>
-              <p class="pbody">Mauris dolor augue, vulputate in pharetra ac, facilisis nec libero. Fusce condimentum gravida urna, vitae scelerisque erat ornare nec.</p>
+              <p class="pbody">You may check out my code for this site <a href="https://github.com/mawhinn/mawhinn.github.io" target="_blank">here on my GitHub</a>.</p>
           </div>
           <div id="future" class="col s12">
               <p class="flow-text grey-text text-darken-4" id="tab1">Future skills</p>
-              <p class="pbody">React is where the future lies and that's where I'm going.  Vue JS looks fun as well and something I don't want to pass up.  Python has always been a language I would love to master.  The SBC Raspberry Pi was built for Python. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum at lacus congue, suscipit elit nec, tincidunt orci.</p>
+              <p class="pbody">React is where the future lies and that's where I'm going.  Vue JS looks fun as well and something I don't want to pass up.  Python has always been a language I would love to master.  The SBC Raspberry Pi was built for Python.</p>
               <p class="pbody">Mauris dolor augue, vulputate in pharetra ac, facilisis nec libero. Fusce condimentum gravida urna, vitae scelerisque erat ornare nec. Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s</p>
           </div>
           </div>
