--- a/home.html
+++ b/home.html
@@ -12,7 +12,7 @@
 <head>
     <title>AJM Portfolio</title>
     <meta name="keywords" content="Andrew Mawhinney, Web Developer, Web Designer">
-    <meta name="description" content="Just a simple dude working with code to bring about high quality webpages, APIs and IoT aplications.">
+    <meta name="description" content="Just a simple dude working with code to bring about a better experience for everyone">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta http-equiv="content-type" content="text/html; charset=utf-8">
@@ -21,7 +21,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-rc.2/css/materialize.min.css">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.rawgit.com/konpa/devicon/df6431e323547add1b4cf45992913f15286456d3/devicon.min.css">
-    <link rel="shortcut icon" href="support_files/images/AM_Logo_Black.png" type="image/x-icon">
+    <link rel="shortcut icon" class="aa-tab" href="https://res.cloudinary.com/mawhinn/image/upload/v1535483494/AM_Logo_Black_rftami.png" type="image/x-icon">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="support_files/port.css">
     <link rel="stylesheet" href="spinner.html">
@@ -168,7 +168,8 @@
       <div class="row">
         <div class="col s12 l4">
           <h4 class="grey-text text-darken-4">About me..</h4>
-          <p class="pbody">I majored in IT until I discovered my passion for code in late 2017. As I worked an IT job I took up coding on my own time.  Quickly my doors were blown open to all the possibilities of coding. My passion grew into obsesion as I would pour hours into code.</p>
+          <p class="pbody">I majored in IT until I discovered my passion for code in late 2017. As I worked an IT job I took up coding on my own time.
+            Quickly my doors were blown open to all the possibilities of coding. My passion grew into obsesion as I would pour hours into code.</p>
           <p class="pbody">Using resorces such as freeCodeCamp, YouTube and Udamy, I taught myself how to code effectively.</p>
         </div>
         <div class="col s12 l6 offset-l2">
@@ -184,13 +185,16 @@
           <hr>
           <div id="present" class="col s12">
               <p class="flow-text grey-text text-darken-4" id="tab1">What I'm learning</p>
-              <p class="pbody">Vanilla Javascript is what I am drilling on at the moment. I am comforotable with HTML and CSS but I love learning new tricks behiend them. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum at lacus congue, suscipit elit nec, tincidunt orci.</p>
+              <p class="pbody">Vanilla Javascript is what I am drilling on at the moment. I am comforotable with HTML and CSS but I love learning new tricks behiend them.
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum at lacus congue, suscipit elit nec, tincidunt orci.</p>
               <p class="pbody">You may check out my code for this site <a href="https://github.com/mawhinn/mawhinn.github.io" target="_blank">here on my GitHub</a>.</p>
           </div>
           <div id="future" class="col s12">
               <p class="flow-text grey-text text-darken-4" id="tab1">Future skills</p>
               <p class="pbody">React is where the future lies and that's where I'm going.  Vue JS looks fun as well and something I don't want to pass up.  Python has always been a language I would love to master.  The SBC Raspberry Pi was built for Python.</p>
-              <p class="pbody">Mauris dolor augue, vulputate in pharetra ac, facilisis nec libero. Fusce condimentum gravida urna, vitae scelerisque erat ornare nec. Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s</p>
+              <p class="pbody">Mauris dolor augue, vulputate in pharetra ac, facilisis nec libero.
+                Fusce condimentum gravida urna, vitae scelerisque erat ornare nec.
+                Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s</p>
           </div>
           </div>
         </div>
