Email form coming soon

--- a/home.html
+++ b/home.html
@@ -238,6 +238,11 @@
           </div>
         <div class="col s12 l5 offset-l2">
           <form>
+
+            <div id="watermark">
+            <p id="bg-text">Coming <br/>Soon</p>
+          	</div>
+
             <div class="input-field">
               <i class="material-icons prefix">email</i>
               <input type="email" id="email">
@@ -269,7 +274,7 @@
               </p>
             </div>
             <div class="input-field center">
-              <button class="btn grey darken-3">Submit</button>
+              <button class="btn grey darken-3" onclick="sorryFunction()">Submit</button>
             </div>
           </form>
         </div>
